--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: 393710905303.dkr.ecr.eu-central-1.amazonaws.com/danutblaj:latest
     environment:
       - 'DB_HOSTNAME=terraform-20221021083123831800000001.cky0rmojopyi.eu-central-1.rds.amazonaws.com'
-      - 'DB_USERNAME=DevOpsDB'
-      - 'DB_PASSWORD=DevOpsDB'
-      - 'DB_DATABASE=DevOpsDB'
+      - 'DB_USERNAME=DevOps'
+      - 'DB_PASSWORD=DevOps'
+      - 'DB_DATABASE=DevOps'
     ports:
       - 80
