--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   go:
     image: 393710905303.dkr.ecr.eu-central-1.amazonaws.com/danutblaj:latest
     environment:
-      - 'DB_HOSTNAME=terraform-20221021083123831800000001.cky0rmojopyi.eu-central-1.rds.amazonaws.com'
+      - 'DB_HOSTNAME=<insert your rds endpoint here>'
       - 'DB_USERNAME=DevOps'
       - 'DB_PASSWORD=DevOps'
       - 'DB_DATABASE=DevOps'
